--- a/preprocess.ipynb
+++ b/preprocess.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt \n",
     "import numpy as np\n",
@@ -31,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +34,8 @@
     "from clean_utils.io import get_features_and_labels\n",
     "img_dir = \"C:/Users/User/Desktop/Probation/\"\n",
     "fname = 'C:/Users/User/dev/data/q1_q17_dr24_tce_clean.csv'\n",
-    "txt_rootdir = 'C:/Users/User/dev/data/train/flux/'"
+    "txt_rootdir = 'C:/Users/User/dev/data/train/flux/'\n",
+    "pd.set_option('display.max_rows', 500)"
    ]
   },
   {
@@ -268,22 +260,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.0"
+       "['009883311']"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.median(np.arange(1))"
+    "get_PC_IDs()"
    ]
   },
   {
@@ -424,13 +416,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['012058931']"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df = pd.read_csv(os.path.join(csv_folder, csv_name_drop_unk))\n",
-    "df['norm_kepid'] = df['kepid'].apply(norm_kepid)\n",
-    "df.sort_values(by=['norm_kepid', 'tce_plnt_num'], inplace=True)"
+    "get_PC_IDs()"
    ]
   },
   {
@@ -463,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -512,158 +513,270 @@
        "      <th></th>\n",
        "      <th>kepid</th>\n",
        "      <th>tce_plnt_num</th>\n",
-       "      <th>tce_rogue_flag</th>\n",
        "      <th>tce_period</th>\n",
        "      <th>tce_period_err</th>\n",
        "      <th>tce_time0bk</th>\n",
        "      <th>tce_time0bk_err</th>\n",
+       "      <th>tce_ror</th>\n",
+       "      <th>tce_ror_err</th>\n",
        "      <th>tce_impact</th>\n",
        "      <th>tce_impact_err</th>\n",
        "      <th>tce_duration</th>\n",
        "      <th>tce_duration_err</th>\n",
        "      <th>tce_depth</th>\n",
        "      <th>tce_depth_err</th>\n",
+       "      <th>tce_eccen</th>\n",
+       "      <th>tce_eccen_err</th>\n",
+       "      <th>tce_num_transits</th>\n",
+       "      <th>tce_model_snr</th>\n",
+       "      <th>tce_model_chisq</th>\n",
+       "      <th>tce_robstat</th>\n",
+       "      <th>tce_prad</th>\n",
+       "      <th>tce_prad_err</th>\n",
+       "      <th>tce_eqt</th>\n",
+       "      <th>tce_eqt_err</th>\n",
+       "      <th>tce_steff</th>\n",
+       "      <th>tce_steff_err</th>\n",
+       "      <th>tce_slogg</th>\n",
+       "      <th>tce_slogg_err</th>\n",
+       "      <th>tce_sradius</th>\n",
+       "      <th>tce_sradius_err</th>\n",
        "      <th>av_training_set</th>\n",
-       "      <th>norm_kepid</th>\n",
-       "      <th>int_label</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1162345</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.831850</td>\n",
+       "      <td>0.000067</td>\n",
+       "      <td>132.227</td>\n",
+       "      <td>0.035197</td>\n",
+       "      <td>0.002704</td>\n",
+       "      <td>0.004213</td>\n",
+       "      <td>0.92600</td>\n",
+       "      <td>1.4710</td>\n",
+       "      <td>2.392</td>\n",
+       "      <td>21.00000</td>\n",
+       "      <td>6.092</td>\n",
+       "      <td>2.636</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1609</td>\n",
+       "      <td>2.950</td>\n",
+       "      <td>22280.0</td>\n",
+       "      <td>13.41</td>\n",
+       "      <td>0.5099</td>\n",
+       "      <td>0.7944</td>\n",
+       "      <td>2760.0</td>\n",
+       "      <td>637.0</td>\n",
+       "      <td>6510.0</td>\n",
+       "      <td>207.0</td>\n",
+       "      <td>4.07</td>\n",
+       "      <td>0.26</td>\n",
+       "      <td>1.728</td>\n",
+       "      <td>0.791</td>\n",
+       "      <td>AFP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1162345</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.831833</td>\n",
+       "      <td>0.000009</td>\n",
+       "      <td>131.919</td>\n",
+       "      <td>0.002209</td>\n",
+       "      <td>0.004806</td>\n",
+       "      <td>0.004501</td>\n",
+       "      <td>0.09536</td>\n",
+       "      <td>51.7700</td>\n",
+       "      <td>2.181</td>\n",
+       "      <td>1.21100</td>\n",
+       "      <td>27.100</td>\n",
+       "      <td>3.550</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1611</td>\n",
+       "      <td>11.950</td>\n",
+       "      <td>19200.0</td>\n",
+       "      <td>14.52</td>\n",
+       "      <td>0.9062</td>\n",
+       "      <td>0.8488</td>\n",
+       "      <td>2760.0</td>\n",
+       "      <td>637.0</td>\n",
+       "      <td>6510.0</td>\n",
+       "      <td>207.0</td>\n",
+       "      <td>4.07</td>\n",
+       "      <td>0.26</td>\n",
+       "      <td>1.728</td>\n",
+       "      <td>0.791</td>\n",
+       "      <td>AFP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>757450</td>\n",
        "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>8.88492</td>\n",
+       "      <td>8.884920</td>\n",
        "      <td>0.000001</td>\n",
        "      <td>134.452</td>\n",
        "      <td>0.000101</td>\n",
+       "      <td>0.114895</td>\n",
+       "      <td>0.001670</td>\n",
        "      <td>0.05677</td>\n",
        "      <td>0.9502</td>\n",
        "      <td>2.078</td>\n",
        "      <td>0.02395</td>\n",
-       "      <td>16310.00</td>\n",
+       "      <td>16310.000</td>\n",
        "      <td>39.530</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>153</td>\n",
+       "      <td>473.300</td>\n",
+       "      <td>2783.0</td>\n",
+       "      <td>548.00</td>\n",
+       "      <td>10.5700</td>\n",
+       "      <td>0.1536</td>\n",
+       "      <td>770.0</td>\n",
+       "      <td>27.6</td>\n",
+       "      <td>5332.0</td>\n",
+       "      <td>102.0</td>\n",
+       "      <td>4.50</td>\n",
+       "      <td>0.04</td>\n",
+       "      <td>0.843</td>\n",
+       "      <td>0.051</td>\n",
        "      <td>PC</td>\n",
-       "      <td>000757450</td>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>1161345</td>\n",
+       "      <th>3</th>\n",
+       "      <td>892667</td>\n",
        "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>4.28758</td>\n",
-       "      <td>0.000001</td>\n",
-       "      <td>133.434</td>\n",
-       "      <td>0.000152</td>\n",
-       "      <td>0.70640</td>\n",
-       "      <td>0.2774</td>\n",
-       "      <td>1.113</td>\n",
-       "      <td>0.04035</td>\n",
-       "      <td>890.70</td>\n",
-       "      <td>7.824</td>\n",
-       "      <td>PC</td>\n",
-       "      <td>001161345</td>\n",
-       "      <td>1</td>\n",
+       "      <td>2.262110</td>\n",
+       "      <td>0.000027</td>\n",
+       "      <td>132.171</td>\n",
+       "      <td>0.006531</td>\n",
+       "      <td>0.005046</td>\n",
+       "      <td>0.003233</td>\n",
+       "      <td>0.30000</td>\n",
+       "      <td>10.6100</td>\n",
+       "      <td>7.509</td>\n",
+       "      <td>5.19800</td>\n",
+       "      <td>29.410</td>\n",
+       "      <td>3.403</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>599</td>\n",
+       "      <td>9.239</td>\n",
+       "      <td>33890.0</td>\n",
+       "      <td>14.35</td>\n",
+       "      <td>0.9107</td>\n",
+       "      <td>0.5836</td>\n",
+       "      <td>1960.0</td>\n",
+       "      <td>486.0</td>\n",
+       "      <td>6609.0</td>\n",
+       "      <td>236.0</td>\n",
+       "      <td>4.11</td>\n",
+       "      <td>0.28</td>\n",
+       "      <td>1.654</td>\n",
+       "      <td>0.811</td>\n",
+       "      <td>NTP</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>194</th>\n",
-       "      <td>1429589</td>\n",
+       "      <th>4</th>\n",
+       "      <td>892772</td>\n",
        "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>38.16880</td>\n",
-       "      <td>0.000693</td>\n",
-       "      <td>144.468</td>\n",
-       "      <td>0.014937</td>\n",
-       "      <td>0.86810</td>\n",
-       "      <td>0.6613</td>\n",
-       "      <td>6.769</td>\n",
-       "      <td>1.10800</td>\n",
-       "      <td>83.53</td>\n",
-       "      <td>9.956</td>\n",
-       "      <td>PC</td>\n",
-       "      <td>001429589</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>261</th>\n",
-       "      <td>1431122</td>\n",
-       "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>4.29894</td>\n",
-       "      <td>0.000013</td>\n",
-       "      <td>132.858</td>\n",
-       "      <td>0.002080</td>\n",
-       "      <td>0.92710</td>\n",
-       "      <td>0.1488</td>\n",
-       "      <td>2.235</td>\n",
-       "      <td>0.39620</td>\n",
-       "      <td>251.70</td>\n",
-       "      <td>14.160</td>\n",
-       "      <td>PC</td>\n",
-       "      <td>001431122</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>333</th>\n",
-       "      <td>1432789</td>\n",
-       "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>9.93142</td>\n",
-       "      <td>0.000060</td>\n",
-       "      <td>136.492</td>\n",
-       "      <td>0.004864</td>\n",
-       "      <td>0.88610</td>\n",
-       "      <td>0.1081</td>\n",
-       "      <td>5.967</td>\n",
-       "      <td>0.41530</td>\n",
-       "      <td>415.60</td>\n",
-       "      <td>17.100</td>\n",
-       "      <td>PC</td>\n",
-       "      <td>001432789</td>\n",
-       "      <td>1</td>\n",
+       "      <td>5.092600</td>\n",
+       "      <td>0.000031</td>\n",
+       "      <td>133.451</td>\n",
+       "      <td>0.004821</td>\n",
+       "      <td>0.014152</td>\n",
+       "      <td>0.021100</td>\n",
+       "      <td>0.30000</td>\n",
+       "      <td>16.0900</td>\n",
+       "      <td>3.399</td>\n",
+       "      <td>0.24260</td>\n",
+       "      <td>246.500</td>\n",
+       "      <td>17.380</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>225</td>\n",
+       "      <td>15.250</td>\n",
+       "      <td>5974.0</td>\n",
+       "      <td>16.91</td>\n",
+       "      <td>1.1600</td>\n",
+       "      <td>1.7290</td>\n",
+       "      <td>844.0</td>\n",
+       "      <td>78.6</td>\n",
+       "      <td>5037.0</td>\n",
+       "      <td>197.0</td>\n",
+       "      <td>4.55</td>\n",
+       "      <td>0.12</td>\n",
+       "      <td>0.751</td>\n",
+       "      <td>0.127</td>\n",
+       "      <td>AFP</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       kepid  tce_plnt_num  tce_rogue_flag  tce_period  tce_period_err  \\\n",
-       "2     757450             1             NaN     8.88492        0.000001   \n",
-       "11   1161345             1             NaN     4.28758        0.000001   \n",
-       "194  1429589             1             NaN    38.16880        0.000693   \n",
-       "261  1431122             1             NaN     4.29894        0.000013   \n",
-       "333  1432789             1             NaN     9.93142        0.000060   \n",
+       "     kepid  tce_plnt_num  tce_period  tce_period_err  tce_time0bk  \\\n",
+       "0  1162345             2    0.831850        0.000067      132.227   \n",
+       "1  1162345             3    0.831833        0.000009      131.919   \n",
+       "2   757450             1    8.884920        0.000001      134.452   \n",
+       "3   892667             1    2.262110        0.000027      132.171   \n",
+       "4   892772             1    5.092600        0.000031      133.451   \n",
        "\n",
-       "     tce_time0bk  tce_time0bk_err  tce_impact  tce_impact_err  tce_duration  \\\n",
-       "2        134.452         0.000101     0.05677          0.9502         2.078   \n",
-       "11       133.434         0.000152     0.70640          0.2774         1.113   \n",
-       "194      144.468         0.014937     0.86810          0.6613         6.769   \n",
-       "261      132.858         0.002080     0.92710          0.1488         2.235   \n",
-       "333      136.492         0.004864     0.88610          0.1081         5.967   \n",
+       "   tce_time0bk_err   tce_ror  tce_ror_err  tce_impact  tce_impact_err  \\\n",
+       "0         0.035197  0.002704     0.004213     0.92600          1.4710   \n",
+       "1         0.002209  0.004806     0.004501     0.09536         51.7700   \n",
+       "2         0.000101  0.114895     0.001670     0.05677          0.9502   \n",
+       "3         0.006531  0.005046     0.003233     0.30000         10.6100   \n",
+       "4         0.004821  0.014152     0.021100     0.30000         16.0900   \n",
        "\n",
-       "     tce_duration_err  tce_depth  tce_depth_err av_training_set norm_kepid  \\\n",
-       "2             0.02395   16310.00         39.530              PC  000757450   \n",
-       "11            0.04035     890.70          7.824              PC  001161345   \n",
-       "194           1.10800      83.53          9.956              PC  001429589   \n",
-       "261           0.39620     251.70         14.160              PC  001431122   \n",
-       "333           0.41530     415.60         17.100              PC  001432789   \n",
+       "   tce_duration  tce_duration_err  tce_depth  tce_depth_err  tce_eccen  \\\n",
+       "0         2.392          21.00000      6.092          2.636          0   \n",
+       "1         2.181           1.21100     27.100          3.550          0   \n",
+       "2         2.078           0.02395  16310.000         39.530          0   \n",
+       "3         7.509           5.19800     29.410          3.403          0   \n",
+       "4         3.399           0.24260    246.500         17.380          0   \n",
        "\n",
-       "     int_label  \n",
-       "2            1  \n",
-       "11           1  \n",
-       "194          1  \n",
-       "261          1  \n",
-       "333          1  "
+       "   tce_eccen_err  tce_num_transits  tce_model_snr  tce_model_chisq  \\\n",
+       "0              0              1609          2.950          22280.0   \n",
+       "1              0              1611         11.950          19200.0   \n",
+       "2              0               153        473.300           2783.0   \n",
+       "3              0               599          9.239          33890.0   \n",
+       "4              0               225         15.250           5974.0   \n",
+       "\n",
+       "   tce_robstat  tce_prad  tce_prad_err  tce_eqt  tce_eqt_err  tce_steff  \\\n",
+       "0        13.41    0.5099        0.7944   2760.0        637.0     6510.0   \n",
+       "1        14.52    0.9062        0.8488   2760.0        637.0     6510.0   \n",
+       "2       548.00   10.5700        0.1536    770.0         27.6     5332.0   \n",
+       "3        14.35    0.9107        0.5836   1960.0        486.0     6609.0   \n",
+       "4        16.91    1.1600        1.7290    844.0         78.6     5037.0   \n",
+       "\n",
+       "   tce_steff_err  tce_slogg  tce_slogg_err  tce_sradius  tce_sradius_err  \\\n",
+       "0          207.0       4.07           0.26        1.728            0.791   \n",
+       "1          207.0       4.07           0.26        1.728            0.791   \n",
+       "2          102.0       4.50           0.04        0.843            0.051   \n",
+       "3          236.0       4.11           0.28        1.654            0.811   \n",
+       "4          197.0       4.55           0.12        0.751            0.127   \n",
+       "\n",
+       "  av_training_set  \n",
+       "0             AFP  \n",
+       "1             AFP  \n",
+       "2              PC  \n",
+       "3             NTP  \n",
+       "4             AFP  "
       ]
      },
-     "execution_count": 102,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "pd.set_option('display.max_columns', 500)\n",
     "df24.head()"
    ]
   },
