--- a/train.ipynb
+++ b/train.ipynb
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [
     {
@@ -414,21 +414,20 @@
      "output_type": "stream",
      "text": [
       "6 global res_blocks\n",
-      "7 local res_blocks\n",
-      "setting dense model NOT trainable\n"
+      "7 local res_blocks\n"
      ]
     }
    ],
    "source": [
     "# m = load_model()\n",
-    "# m = get_resnet_model()\n",
-    "m = get_model(dense=dense)\n",
+    "m = get_resnet_model()\n",
+    "# m = get_model(dense=dense)\n",
     "# m.summary()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
@@ -438,38 +437,8 @@
      "output_type": "stream",
      "text": [
       "set learning rate to 9.999999747378752e-05\n",
-      "Train on 25493 samples, validate on 2833 samples\n",
-      "Set Learning Rate: 0.0008\n",
-      "Epoch 1/15\n",
-      "25493/25493 [==============================] - 95s 4ms/sample - loss: 0.2533 - acc: 0.9178 - val_loss: 0.1655 - val_acc: 0.9421\n",
-      "Epoch 2/15\n",
-      "25493/25493 [==============================] - 31s 1ms/sample - loss: 0.1472 - acc: 0.9488 - val_loss: 0.1412 - val_acc: 0.9492\n",
-      "Epoch 3/15\n",
-      "25493/25493 [==============================] - 31s 1ms/sample - loss: 0.1362 - acc: 0.9520 - val_loss: 0.1396 - val_acc: 0.9502\n",
-      "Epoch 4/15\n",
-      "25493/25493 [==============================] - 31s 1ms/sample - loss: 0.1295 - acc: 0.9534 - val_loss: 0.1313 - val_acc: 0.9541\n",
-      "Set Learning Rate: 4e-05\n",
-      "Epoch 5/15\n",
-      "25493/25493 [==============================] - 31s 1ms/sample - loss: 0.1218 - acc: 0.9565 - val_loss: 0.1286 - val_acc: 0.9573\n",
-      "Epoch 6/15\n",
-      "25493/25493 [==============================] - 31s 1ms/sample - loss: 0.1189 - acc: 0.9576 - val_loss: 0.1279 - val_acc: 0.9569\n",
-      "Epoch 7/15\n",
-      "25493/25493 [==============================] - 31s 1ms/sample - loss: 0.1167 - acc: 0.9589 - val_loss: 0.1273 - val_acc: 0.9569\n",
-      "Epoch 8/15\n",
-      "25493/25493 [==============================] - 31s 1ms/sample - loss: 0.1157 - acc: 0.9588 - val_loss: 0.1273 - val_acc: 0.9569\n",
-      "Epoch 9/15\n",
-      "   64/25493 [..............................] - ETA: 29s - loss: 0.1106 - acc: 0.9688"
+      "Train on 25493 samples, validate on 2833 samples\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x1e3499896a0>"
-      ]
-     },
-     "execution_count": 155,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -478,7 +447,7 @@
     "mycallback = LowerLr([4,4],[0.8e-3, 0.4e-4])\n",
     "\n",
     "# (g_train_x, g_val_x), (l_train_x, l_val_x ), (train_y, val_y) = next(spliter)\n",
-    "m.fit([aug_g_x, aug_l_x, aug_features], aug_y, epochs=15, batch_size=64, \n",
+    "m.fit([aug_g_x, aug_l_x], aug_y, epochs=15, batch_size=64, \n",
     "         validation_split=0.1, callbacks=[mycallback], verbose=1)"
    ]
   },
@@ -539,25 +508,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1574/1574 [==============================] - 2s 1ms/sample - loss: 0.1866 - acc: 0.9409\n",
-      "1574/1574 [==============================] - 1s 533us/sample - loss: 0.2290 - acc: 0.9149\n",
-      "saving to C:\\Users\\User\\dev\\kepler\\models\\train.h5\n",
-      "finished saving\n"
+      "1574/1574 [==============================] - 2s 1ms/sample - loss: 0.2031 - acc: 0.9371\n",
+      "1574/1574 [==============================] - 1s 565us/sample - loss: 0.2290 - acc: 0.9149\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[0.22898391504527046, 0.91486657]"
+      ]
+     },
+     "execution_count": 168,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# m = load_model()\n",
     "m.evaluate([g_test_x, l_test_x, test_features], test_y)\n",
     "dense.evaluate(test_features, test_y)\n",
-    "save_model(m)\n",
+    "# save_model(m)\n",
     "# save_train_test_data(\"C:/Users/User/dev/data/best/\", *(g_train_x, l_train_x, train_y), *(g_test_x, l_test_x, test_y) )"
    ]
   },
