--- a/train.ipynb
+++ b/train.ipynb
@@ -437,7 +437,12 @@
      "output_type": "stream",
      "text": [
       "set learning rate to 9.999999747378752e-05\n",
-      "Train on 25493 samples, validate on 2833 samples\n"
+      "Train on 25493 samples, validate on 2833 samples\n",
+      "Set Learning Rate: 0.0008\n",
+      "Epoch 1/15\n",
+      "25493/25493 [==============================] - 113s 4ms/sample - loss: 0.2643 - acc: 0.9029 - val_loss: 0.2373 - val_acc: 0.9188\n",
+      "Epoch 2/15\n",
+      " 6976/25493 [=======>......................] - ETA: 24s - loss: 0.2196 - acc: 0.9216"
      ]
     }
    ],
