bug fix in check-dr24.py

--- a/preprocess.ipynb
+++ b/preprocess.ipynb
@@ -464,16 +464,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df24 = pd.read_csv(os.path.join(csv_folder, csv_name_drop_unk))"
+    "df24 = pd.read_csv(os.path.join(csv_folder, csv_name), comment='#')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -487,360 +487,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>kepid</th>\n",
-       "      <th>tce_plnt_num</th>\n",
-       "      <th>tce_period</th>\n",
-       "      <th>tce_period_err</th>\n",
-       "      <th>tce_time0bk</th>\n",
-       "      <th>tce_time0bk_err</th>\n",
-       "      <th>tce_ror</th>\n",
-       "      <th>tce_ror_err</th>\n",
-       "      <th>tce_dor</th>\n",
-       "      <th>tce_dor_err</th>\n",
-       "      <th>tce_incl</th>\n",
-       "      <th>tce_incl_err</th>\n",
-       "      <th>tce_impact</th>\n",
-       "      <th>tce_impact_err</th>\n",
-       "      <th>tce_duration</th>\n",
-       "      <th>tce_duration_err</th>\n",
-       "      <th>tce_ingress</th>\n",
-       "      <th>tce_ingress_err</th>\n",
-       "      <th>tce_depth</th>\n",
-       "      <th>tce_depth_err</th>\n",
-       "      <th>tce_eccen</th>\n",
-       "      <th>tce_eccen_err</th>\n",
-       "      <th>tce_num_transits</th>\n",
-       "      <th>tce_model_snr</th>\n",
-       "      <th>tce_model_chisq</th>\n",
-       "      <th>tce_robstat</th>\n",
-       "      <th>tce_prad</th>\n",
-       "      <th>tce_prad_err</th>\n",
-       "      <th>tce_eqt</th>\n",
-       "      <th>tce_eqt_err</th>\n",
-       "      <th>tce_steff</th>\n",
-       "      <th>tce_steff_err</th>\n",
-       "      <th>tce_slogg</th>\n",
-       "      <th>tce_slogg_err</th>\n",
-       "      <th>tce_sradius</th>\n",
-       "      <th>tce_sradius_err</th>\n",
-       "      <th>av_training_set</th>\n",
-       "      <th>norm_kepid</th>\n",
-       "      <th>int_label</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>757450</td>\n",
-       "      <td>1</td>\n",
-       "      <td>8.88492</td>\n",
-       "      <td>0.000001</td>\n",
-       "      <td>134.452</td>\n",
-       "      <td>0.000101</td>\n",
-       "      <td>0.114895</td>\n",
-       "      <td>0.001670</td>\n",
-       "      <td>36.377831</td>\n",
-       "      <td>1.944098</td>\n",
-       "      <td>89.91</td>\n",
-       "      <td>1.501</td>\n",
-       "      <td>0.05677</td>\n",
-       "      <td>0.9502</td>\n",
-       "      <td>2.078</td>\n",
-       "      <td>0.02395</td>\n",
-       "      <td>0.21470</td>\n",
-       "      <td>0.02620</td>\n",
-       "      <td>16310.00</td>\n",
-       "      <td>39.530</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>153</td>\n",
-       "      <td>473.300</td>\n",
-       "      <td>2783.0</td>\n",
-       "      <td>548.00</td>\n",
-       "      <td>10.570</td>\n",
-       "      <td>0.1536</td>\n",
-       "      <td>770.0</td>\n",
-       "      <td>27.6</td>\n",
-       "      <td>5332.0</td>\n",
-       "      <td>102.0</td>\n",
-       "      <td>4.50</td>\n",
-       "      <td>0.04</td>\n",
-       "      <td>0.843</td>\n",
-       "      <td>0.051</td>\n",
-       "      <td>PC</td>\n",
-       "      <td>000757450</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>1161345</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4.28758</td>\n",
-       "      <td>0.000001</td>\n",
-       "      <td>133.434</td>\n",
-       "      <td>0.000152</td>\n",
-       "      <td>0.029528</td>\n",
-       "      <td>0.003053</td>\n",
-       "      <td>22.046943</td>\n",
-       "      <td>8.364355</td>\n",
-       "      <td>88.16</td>\n",
-       "      <td>1.418</td>\n",
-       "      <td>0.70640</td>\n",
-       "      <td>0.2774</td>\n",
-       "      <td>1.113</td>\n",
-       "      <td>0.04035</td>\n",
-       "      <td>0.06198</td>\n",
-       "      <td>0.05416</td>\n",
-       "      <td>890.70</td>\n",
-       "      <td>7.824</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>313</td>\n",
-       "      <td>137.900</td>\n",
-       "      <td>10260.0</td>\n",
-       "      <td>191.40</td>\n",
-       "      <td>2.616</td>\n",
-       "      <td>0.2706</td>\n",
-       "      <td>940.0</td>\n",
-       "      <td>60.8</td>\n",
-       "      <td>5295.0</td>\n",
-       "      <td>104.0</td>\n",
-       "      <td>4.58</td>\n",
-       "      <td>0.11</td>\n",
-       "      <td>0.812</td>\n",
-       "      <td>0.100</td>\n",
-       "      <td>PC</td>\n",
-       "      <td>001161345</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>194</th>\n",
-       "      <td>1429589</td>\n",
-       "      <td>1</td>\n",
-       "      <td>38.16880</td>\n",
-       "      <td>0.000693</td>\n",
-       "      <td>144.468</td>\n",
-       "      <td>0.014937</td>\n",
-       "      <td>0.009595</td>\n",
-       "      <td>0.004164</td>\n",
-       "      <td>22.202700</td>\n",
-       "      <td>51.062830</td>\n",
-       "      <td>87.76</td>\n",
-       "      <td>6.864</td>\n",
-       "      <td>0.86810</td>\n",
-       "      <td>0.6613</td>\n",
-       "      <td>6.769</td>\n",
-       "      <td>1.10800</td>\n",
-       "      <td>0.25380</td>\n",
-       "      <td>1.28400</td>\n",
-       "      <td>83.53</td>\n",
-       "      <td>9.956</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>34</td>\n",
-       "      <td>8.166</td>\n",
-       "      <td>1726.0</td>\n",
-       "      <td>12.18</td>\n",
-       "      <td>1.534</td>\n",
-       "      <td>0.6658</td>\n",
-       "      <td>696.0</td>\n",
-       "      <td>170.0</td>\n",
-       "      <td>6164.0</td>\n",
-       "      <td>191.0</td>\n",
-       "      <td>4.12</td>\n",
-       "      <td>0.26</td>\n",
-       "      <td>1.465</td>\n",
-       "      <td>0.708</td>\n",
-       "      <td>PC</td>\n",
-       "      <td>001429589</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>261</th>\n",
-       "      <td>1431122</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4.29894</td>\n",
-       "      <td>0.000013</td>\n",
-       "      <td>132.858</td>\n",
-       "      <td>0.002080</td>\n",
-       "      <td>0.018040</td>\n",
-       "      <td>0.003821</td>\n",
-       "      <td>6.179623</td>\n",
-       "      <td>5.761056</td>\n",
-       "      <td>81.37</td>\n",
-       "      <td>9.500</td>\n",
-       "      <td>0.92710</td>\n",
-       "      <td>0.1488</td>\n",
-       "      <td>2.235</td>\n",
-       "      <td>0.39620</td>\n",
-       "      <td>0.25590</td>\n",
-       "      <td>0.54350</td>\n",
-       "      <td>251.70</td>\n",
-       "      <td>14.160</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>313</td>\n",
-       "      <td>20.310</td>\n",
-       "      <td>5536.0</td>\n",
-       "      <td>19.95</td>\n",
-       "      <td>1.809</td>\n",
-       "      <td>0.3832</td>\n",
-       "      <td>1040.0</td>\n",
-       "      <td>206.0</td>\n",
-       "      <td>5518.0</td>\n",
-       "      <td>186.0</td>\n",
-       "      <td>4.47</td>\n",
-       "      <td>0.26</td>\n",
-       "      <td>0.919</td>\n",
-       "      <td>0.359</td>\n",
-       "      <td>PC</td>\n",
-       "      <td>001431122</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>333</th>\n",
-       "      <td>1432789</td>\n",
-       "      <td>1</td>\n",
-       "      <td>9.93142</td>\n",
-       "      <td>0.000060</td>\n",
-       "      <td>136.492</td>\n",
-       "      <td>0.004864</td>\n",
-       "      <td>0.021857</td>\n",
-       "      <td>0.002057</td>\n",
-       "      <td>6.471501</td>\n",
-       "      <td>2.771632</td>\n",
-       "      <td>82.13</td>\n",
-       "      <td>4.357</td>\n",
-       "      <td>0.88610</td>\n",
-       "      <td>0.1081</td>\n",
-       "      <td>5.967</td>\n",
-       "      <td>0.41530</td>\n",
-       "      <td>0.55280</td>\n",
-       "      <td>0.53380</td>\n",
-       "      <td>415.60</td>\n",
-       "      <td>17.100</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>137</td>\n",
-       "      <td>24.640</td>\n",
-       "      <td>6203.0</td>\n",
-       "      <td>26.43</td>\n",
-       "      <td>2.187</td>\n",
-       "      <td>0.2059</td>\n",
-       "      <td>824.0</td>\n",
-       "      <td>161.0</td>\n",
-       "      <td>5880.0</td>\n",
-       "      <td>190.0</td>\n",
-       "      <td>4.52</td>\n",
-       "      <td>0.28</td>\n",
-       "      <td>0.917</td>\n",
-       "      <td>0.353</td>\n",
-       "      <td>PC</td>\n",
-       "      <td>001432789</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "       kepid  tce_plnt_num  tce_period  tce_period_err  tce_time0bk  \\\n",
-       "2     757450             1     8.88492        0.000001      134.452   \n",
-       "11   1161345             1     4.28758        0.000001      133.434   \n",
-       "194  1429589             1    38.16880        0.000693      144.468   \n",
-       "261  1431122             1     4.29894        0.000013      132.858   \n",
-       "333  1432789             1     9.93142        0.000060      136.492   \n",
-       "\n",
-       "     tce_time0bk_err   tce_ror  tce_ror_err    tce_dor  tce_dor_err  tce_incl  \\\n",
-       "2           0.000101  0.114895     0.001670  36.377831     1.944098     89.91   \n",
-       "11          0.000152  0.029528     0.003053  22.046943     8.364355     88.16   \n",
-       "194         0.014937  0.009595     0.004164  22.202700    51.062830     87.76   \n",
-       "261         0.002080  0.018040     0.003821   6.179623     5.761056     81.37   \n",
-       "333         0.004864  0.021857     0.002057   6.471501     2.771632     82.13   \n",
-       "\n",
-       "     tce_incl_err  tce_impact  tce_impact_err  tce_duration  tce_duration_err  \\\n",
-       "2           1.501     0.05677          0.9502         2.078           0.02395   \n",
-       "11          1.418     0.70640          0.2774         1.113           0.04035   \n",
-       "194         6.864     0.86810          0.6613         6.769           1.10800   \n",
-       "261         9.500     0.92710          0.1488         2.235           0.39620   \n",
-       "333         4.357     0.88610          0.1081         5.967           0.41530   \n",
-       "\n",
-       "     tce_ingress  tce_ingress_err  tce_depth  tce_depth_err  tce_eccen  \\\n",
-       "2        0.21470          0.02620   16310.00         39.530          0   \n",
-       "11       0.06198          0.05416     890.70          7.824          0   \n",
-       "194      0.25380          1.28400      83.53          9.956          0   \n",
-       "261      0.25590          0.54350     251.70         14.160          0   \n",
-       "333      0.55280          0.53380     415.60         17.100          0   \n",
-       "\n",
-       "     tce_eccen_err  tce_num_transits  tce_model_snr  tce_model_chisq  \\\n",
-       "2                0               153        473.300           2783.0   \n",
-       "11               0               313        137.900          10260.0   \n",
-       "194              0                34          8.166           1726.0   \n",
-       "261              0               313         20.310           5536.0   \n",
-       "333              0               137         24.640           6203.0   \n",
-       "\n",
-       "     tce_robstat  tce_prad  tce_prad_err  tce_eqt  tce_eqt_err  tce_steff  \\\n",
-       "2         548.00    10.570        0.1536    770.0         27.6     5332.0   \n",
-       "11        191.40     2.616        0.2706    940.0         60.8     5295.0   \n",
-       "194        12.18     1.534        0.6658    696.0        170.0     6164.0   \n",
-       "261        19.95     1.809        0.3832   1040.0        206.0     5518.0   \n",
-       "333        26.43     2.187        0.2059    824.0        161.0     5880.0   \n",
-       "\n",
-       "     tce_steff_err  tce_slogg  tce_slogg_err  tce_sradius  tce_sradius_err  \\\n",
-       "2            102.0       4.50           0.04        0.843            0.051   \n",
-       "11           104.0       4.58           0.11        0.812            0.100   \n",
-       "194          191.0       4.12           0.26        1.465            0.708   \n",
-       "261          186.0       4.47           0.26        0.919            0.359   \n",
-       "333          190.0       4.52           0.28        0.917            0.353   \n",
-       "\n",
-       "    av_training_set norm_kepid  int_label  \n",
-       "2                PC  000757450          1  \n",
-       "11               PC  001161345          1  \n",
-       "194              PC  001429589          1  \n",
-       "261              PC  001431122          1  \n",
-       "333              PC  001432789          1  "
+       "4630"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "pd.set_option('display.max_columns', 500)\n",
-    "df24.head()"
+    "# df24.head()\n",
+    "len(df24[df24['av_training_set']=='UNK'])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -921,21 +586,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sys.path.append('../../learn')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import hello"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 115,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello world\n"
+     ]
     }
    ],
-   "source": []
+   "source": [
+    "hello.hello()"
+   ]
   }
  ],
  "metadata": {
